--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -9,13 +9,18 @@ data:
   val_batch_size: 1312
   return_raw_input_ids: False  # This should be set to true when the tokenizer between policy and rm differs
   return_raw_chat: False
+  n_samples: 1
+  filter_accuracy: False
+  accuracy_lower_bound: 0.0
+  accuracy_upper_bound: 1.0
+  oversample_factor: 1.0 # Sample more responses than the batch size
 
 actor_rollout_ref:
   hybrid_engine: True
   model:
     path: ~/models/deepseek-llm-7b-chat
     external_lib: null
-    override_config: { }
+    override_config: {}
     enable_gradient_checkpointing: False
   actor:
     strategy: fsdp  # This is for backward-compatibility
@@ -66,8 +71,6 @@ actor_rollout_ref:
     log_prob_micro_batch_size: 128
     # for hf rollout
     do_sample: True
-    # number of responses (i.e. num sample times)
-    n: 1 # > 1 for grpo
 
 critic:
   strategy: fsdp
@@ -80,7 +83,7 @@ critic:
   model:
     path: ~/models/deepseek-llm-7b-chat
     tokenizer_path: ${actor_rollout_ref.model.path}
-    override_config: { }
+    override_config: {}
     external_lib: ${actor_rollout_ref.model.external_lib}
     enable_gradient_checkpointing: False
     fsdp_config:
@@ -92,14 +95,20 @@ critic:
         min_num_params: 0
   ppo_mini_batch_size: ${actor_rollout_ref.actor.ppo_mini_batch_size}
   ppo_micro_batch_size: 64
-  forward_micro_batch_size: ${critic.ppo_micro_batch_size}
   ppo_epochs: ${actor_rollout_ref.actor.ppo_epochs}
   shuffle: ${actor_rollout_ref.actor.shuffle}
   grad_clip: 1.0
   cliprange_value: 0.5
 
+# verifier is more than source of reward. so it should be independent
+verifier:
+  type: prime
+#  timeout: 5
+#  num_processes: 64
+  reward_coef: 5
+
 reward_model:
-  enable: False
+  enable: True
   strategy: fsdp
   model:
     input_tokenizer: ${actor_rollout_ref.model.path}  # set this to null if the chat template is identical
@@ -108,13 +117,50 @@ reward_model:
     fsdp_config:
       min_num_params: 0
       param_offload: False
+  mini_batch_size: ${actor_rollout_ref.actor.ppo_mini_batch_size}
   micro_batch_size: 64
   max_length: null
+  rm_coef: 0 # weight for the reward model
+  rm_type: value # set to prime for process reward
+  # configurations for process rewards of prime
+  prime_granularity: token # whole
+  prime_norm: batch_norm # batch_norm
+  prime_model:
+    input_tokenizer: ${actor_rollout_ref.model.path}
+    path: openbmb/Eurus-7b-sft
+    ref_type: freeze # policy
+    ref_path: openbmb/Eurus-7b-sft
+    external_lib: ${actor_rollout_ref.model.external_lib}
+    enable_gradient_checkpointing: ${actor_rollout_ref.model.enable_gradient_checkpointing}
+    fsdp_config:
+      wrap_policy:
+        min_num_params: 0
+      param_offload: ${actor_rollout_ref.actor.fsdp_config.param_offload}
+      grad_offload: ${actor_rollout_ref.actor.fsdp_config.grad_offload}
+      optimizer_offload: ${actor_rollout_ref.actor.fsdp_config.optimizer_offload}
+    update: none #before, after, or none
+    optim:
+      lr: 1e-6
+      lr_warmup_steps_ratio: 0.
+      min_lr_ratio: null
+      warmup_style: constant
+      total_training_steps: -1  # must be override by program
+      weight_decay: 0.
+      grad_clip: 1.0
+    beta_train: 0.05
+    loss_type: ce # currently only supports ce loss
+
+
 
 algorithm:
   gamma: 1.0
   lam: 1.0
   adv_estimator: gae
+  # now supports rloo. it treats different source of reward separately.
+  # TODO: it should also support different gamma for different rewards.
+  adv_params:
+    verifier_gamma: ${algorithm.gamma}
+    reward_model_gamma: ${algorithm.gamma}
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
     type: fixed
@@ -124,7 +170,7 @@ trainer:
   total_epochs: 30
   project_name: verl_examples
   experiment_name: gsm8k
-  logger: [ 'console', 'wandb' ]
+  logger: ['console', 'wandb']
   nnodes: 1
   n_gpus_per_node: 8
   save_freq: -1
@@ -132,3 +178,4 @@ trainer:
   critic_warmup: 0
   default_hdfs_dir: ~/experiments/gsm8k/ppo/${trainer.experiment_name}
   default_local_dir: checkpoints/${trainer.project_name}/${trainer.experiment_name}
+  runtime_env: none
