--- a/verl/trainer/config/sft_trainer.yaml
+++ b/verl/trainer/config/sft_trainer.yaml
@@ -9,6 +9,7 @@ data:
   truncation: error
   balance_dp_token: False
   chat_template: null
+  skip_template_apply: False
 model:
   partial_pretrain: ~/models/gemma-1.1-7b-it
   fsdp_config:
