--- a/verl/trainer/config/sft_trainer.yaml
+++ b/verl/trainer/config/sft_trainer.yaml
@@ -9,6 +9,7 @@ data:
   truncation: error
   balance_dp_token: False
   chat_template: null
+  skip_template_apply: False
 model:
   partial_pretrain: ~/models/gemma-1.1-7b-it
   fsdp_config:
@@ -28,8 +29,10 @@ optim:
   weight_decay: 0.01
   warmup_steps_ratio: 0.1
   clip_grad: 1.0
+  label_smoothing: 0.0
 ulysses_sequence_parallel_size: 1
 use_remove_padding: False
+
 trainer:
   default_local_dir: /tmp/sft_model
   default_hdfs_dir: hdfs://tmp/experiments/gsm8k/gemma-1.1-7b-it/ # change the hdfs path here
